--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(ICT1018_Data_Structures C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(ICT1018_Data_Structures main.c)
+add_executable(Hash hash.c)
+
